manageBlue-graphql-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: manageblue-graphql-microservice
  labels:
    app: manageblue-graphql-microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: manageblue-graphql-microservice
  template:
    metadata:
      labels:
        app: manageblue-graphql-microservice
    spec:
      containers:
      - name: manageblue-graphql-microservice
        image: ghcr.io/manageblue/manageblue-microservice-graphql:latest
        ports:
        - containerPort: 5004

---

apiVersion: v1
kind: Service
metadata:
  name: manageblue-graphql-microservice-node-port
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 5004
  selector:
    app: manageblue-graphql-microservice
