manageBlue-grpc-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: manageblue-grpc-microservice
  labels:
    app: manageblue-grpc-microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: manageblue-grpc-microservice
  template:
    metadata:
      labels:
        app: manageblue-grpc-microservice
    spec:
      containers:
      - name: manageblue-microservice-grpc
        image: ghcr.io/manageblue/manageblue-microservice-grpc:latest
        ports:
        - containerPort: 5005
        - containerPort: 50051

---


apiVersion: v1
kind: Service
metadata:
  name: manageblue-grpc-microservice-node-port
spec:
  type: NodePort
  ports:
  - port: 80
    name: rest
    protocol: TCP
    targetPort: 5005
  - port: 50051
    name: grpc
    protocol: TCP
    targetPort: 50051
  selector:
    app: manageblue-grpc-microservice
