manageBlue-images-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: manageblue-images-microservice
  labels:
    app: manageblue-images-microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: manageblue-images-microservice
  template:
    metadata:
      labels:
        app: manageblue-images-microservice
    spec:
      containers:
      - name: manageblue-images-microservice
        image: ghcr.io/manageblue/manageblue-microservice-images:latest
        ports:
        - containerPort: 5003

---

#apiVersion: v1
#kind: Service
#metadata:
#  name: manageblue-images-microservice-load-balancer
#spec:
#  type: LoadBalancer
#  ports:
#    - port: 80
#      protocol: TCP
#      targetPort: 5003
#  selector:
#    app: manageblue-images-microservice

apiVersion: v1
kind: Service
metadata:
  name: manageblue-images-microservice-node-port
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 5003
  selector:
    app: manageblue-images-microservice
