manageBlue-projects-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: manageblue-projects-microservice
  labels:
    app: manageblue-projects-microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: manageblue-projects-microservice
  template:
    metadata:
      labels:
        app: manageblue-projects-microservice
    spec:
      containers:
      - name: manageblue-projects-microservice
        image: ghcr.io/manageblue/manageblue-microservice-projects:latest
        ports:
        - containerPort: 5001
---

apiVersion: v1
kind: Service
metadata:
  name: manageblue-projects-microservice-node-port
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 5001
  selector:
    app: manageblue-projects-microservice
