manageBlue-tasks-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: manageblue-tasks-microservice
  labels:
    app: manageblue-tasks-microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: manageblue-tasks-microservice
  template:
    metadata:
      labels:
        app: manageblue-tasks-microservice
    spec:
      containers:
      - name: manageblue-tasks-microservice
        image: ghcr.io/manageblue/manageblue-microservice-tasks:latest
        ports:
        - containerPort: 5000
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /ready
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 6

---

#apiVersion: v1
#kind: Service
#metadata:
#  name: manageblue-tasks-microservice-load-balancer
#spec:
#  type: LoadBalancer
#  ports:
#    - port: 80
#      protocol: TCP
#      targetPort: 5000
#  selector:
#    app: manageblue-tasks-microservice

apiVersion: v1
kind: Service
metadata:
  name: manageblue-tasks-microservice-node-port
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 5000
  selector:
    app: manageblue-tasks-microservice
